style: normalize record parameter indentation and minor cleanup
Adjust record parameter indentation in JwkKey, JwtHeader, KeyInfo,
and DecodedJwt. Use wildcard import in DevUI runtime service and
modernize get(0) to getFirst() in test.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>